--- a/ja boi.css
+++ b/ja boi.css
@@ -1,93 +1,76 @@
 /* Nodefinē kontenera maksimālo platumu un ar margin: auto nocentre */
 .container {
-    max-width: 1000px;
-    margin: auto;
-  }
-  
-  /* Pieškir izkārtojumu ar css grid, priekš desktop*/
-  @media only screen and (min-width: 700px) {
-    .grid_layout {
-      display: grid;
-      grid-template-areas: 'top top' 'left right';
-      grid-gap: 10px;
-      padding: 15px;
-      grid-template-rows: 150px;
-      grid-auto-rows: 600px;
-    }
-  }
-  
-  .top {
-    grid-area: top;
-    text-align: center;
-  }
-  
-  .left {
-    grid-area: left;
-  }
-  
-  .right {
-    grid-area: right;
-  }
-  
-  .container > div {
-    padding: 30px;
-    border: 1px blueviolet solid;
-  }
-  
-  .container > div h1 {
-    margin-top: 0;
-  }
-  
-  .budget__value {
-    padding-bottom: 30px;
-  }
-  
-  .budget__total {
-    font-size: 30px;
-    margin-bottom: 15px;
-  }
-  
-  /* styling for income and expeses list */
-  .list {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .list_item {
-    display: flex;
-    justify-content: space-between;
-  }
-  .list__inner {
-    flex-grow: 1;
-  }
-  
-  .list__total {
-    align-self: flex-end;
-  }
-  :root {
-    --main-bg-color: coral;
-    --main-txt-color: blue;
-    --main-padding: 15px;
-    --large-padding: 30px;
-    --max-width: 30px;
-    --breakpoint-medium: 800px;
-  }
-  #div1 {
-    background-color: var(--main-bg-color);
-    color: var(--main-txt-color);
-    padding: var(--main-padding);
-    max-width: var(--max-width);
+  max-width: 1000px;
+  margin: auto;
+}
 
+/* Pieškir izkārtojumu ar css grid, priekš desktop*/
+@media only screen and (min-width: 700px) {
+  .grid_layout {
+    display: grid;
+    grid-template-areas: 'top top' 'left right';
+    grid-gap: 10px;
+    padding: 15px;
+    grid-template-rows: 150px;
+    grid-auto-rows: 600px;
   }
-  #div2{
-    background-color: var(--main-bg-color);
-    color: var(--main-txt-color);
-    padding: var(--main-padding);
-    max-width: var(--max-width);
-  }
+}
 
+.top {
+  grid-area: top;
+  text-align: center;
+}
 
+.left {
+  grid-area: left;
+}
 
+.right {
+  grid-area: right;
+}
 
+.container > div {
+  padding: 30px;
+  border: 1px blueviolet solid;
+}
 
+.container > div h1 {
+  margin-top: 0;
+}
 
+.budget__value {
+  padding-bottom: 30px;
+}
+
+.budget__total {
+  font-size: 30px;
+  margin-bottom: 15px;
+}
+
+/* styling for income and expeses list */
+.list {
+  display: flex;
+  flex-direction: column;
+}
+
+.list_item {
+  display: flex;
+  justify-content: space-between;
+}
+.list__inner {
+  flex-grow: 1;
+}
+
+.list__total {
+  align-self: flex-end;
+}
+/* 
+CSS UZDEVUMI
+Nostilot galvenes un saraksta elementus
+-"Pieejamais budžets" tekstam piešķirt stilu, kas labi iederas kopējā dizainā
+-Ievades laukiem piešķirt vizuāli pievilcīgu stilu (font-size, border, padding)
+-Nostilot pogas vizuāli pievilcīgi
+-Izcelt kopējo izdevumu un ienākumu izvadi
+-Ienākumu un izdevumu sarakstam piešķirt stilu, kas labāk nodala saraksta ierakstus vienu no otra
+
+*/
