--- a/ja boi.css
+++ b/ja boi.css
@@ -2,6 +2,7 @@
 .container {
   max-width: 1000px;
   margin: auto;
+  font-style: Courier;
 }
 
 /* Pieškir izkārtojumu ar css grid, priekš desktop*/
